--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -15,6 +15,9 @@
       min-width: 100px;
       &:hover {
         transform: scale(1.1);
+      };
+      img{
+        height: 40px;
       }
     }
     .nav-items {
@@ -49,7 +52,7 @@
     height: auto;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
     transition:  0.5s ease-in-out;
-    .nav-container > * {
+    .nav-container ul:not(.expand) li {
       line-height: 80px;
       font-size: 15px;
     }
@@ -66,6 +69,7 @@
     flex-direction: column;
     justify-content: space-around;
     opacity: 0;
+    user-select: none;
     cursor: pointer;
     .line {
       width: 100%;
@@ -97,12 +101,23 @@
       display: flex;
       flex-direction: column;
       background-color: white;
-      transition: 0.5s ease-in-out;
-
+      height: auto;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+      transition:  0.5s ease-in-out;
+      .nav-container li {
+        line-height: 80px;
+        font-size: 15px;
+      }
+      .nav-logo img {
+        height: 25px;
+      }
       .nav-logo {
         height: 36px;
-        margin-top: 10px;
+        margin-top: 25px;
         margin-right: auto;
+        img{
+          height: 25px;  
+        }
       }
       .nav-items {
         display: flex;
@@ -118,7 +133,7 @@
         max-height: 0;
         overflow: hidden;
         &.expand {
-          max-height: 250px;
+          max-height: 400px;
           overflow-y: auto;
         }
       }
